# Proyecto1Arqui1

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  linker.ld  main.c  readme.txt  run-qemu.sh  run.sh  startup.s  test.elf
asm/: tea_decrypt_asm.s  tea_encrypt_asm.s
